@@ -3,3 +3,4 @@ Bug: Fixed issue with events not being properly described.
 Bug: Fixed issue with guest users not being able to view or use rooms.
 Bug: Fixed issue with thumbnails overriding a css class on Essential theme.
 Bug: Fixed issue with separated groups showing all the recordings when the user is allowed to manage them.
+Feature: Show a warning message to administrators when using the BBB server pre-configured by default.
